--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="" alt="Логотип города Седона">
+          <img class="page-header-logo" src="img/logo-citiofsedona.svg" width="140" height="70.05" alt="Логотип города Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -131,10 +131,10 @@
           <option value="expensive">Сначала дорогое</option>
         </select>
         <a href="#" class="button button-active">
-          <span class="visually-hidden">Показать карточки</span>
+          <span class="visually-hidden">Показать плиткой</span>
         </a>
         <a href="#" class="button">
-          <span class="visually-hidden">Показать по одному</span>
+          <span class="visually-hidden">Показать карточку</span>
         </a>
         <a href="#" class="button">
           <span class="visually-hidden">Показать список</span>
@@ -142,7 +142,7 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель Amara Resort & Spa">
+              <img class="hotel-card-image" src="img/hotel/hotel-1.jpg" width="300" height="212" alt="Отель Amara Resort & Spa">
             </a>
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               <p class="hotel-card-type">Гостиница</p>
@@ -153,7 +153,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель Villas at Poco Diablo">
+              <img class="hotel-card-image" src="img/hotel/hotel-2.jpg" width="300" height="212" alt="Отель Villas at Poco Diablo">
             </a>
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               <p class="hotel-card-type">Гостиница</p>
@@ -164,7 +164,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель Desert Quail Inn">
+              <img class="hotel-card-image" src="img/hotel/hotel-3.jpg" width="300" height="212" alt="Отель Desert Quail Inn">
             </a>
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
               <p class="hotel-card-type">Гостиница</p>
@@ -175,7 +175,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель GreenTree Inn">
+              <img class="hotel-card-image" src="img/hotel/hotel-4.jpg" width="300" height="212" alt="Отель GreenTree Inn">
             </a>
             <h3 class="hotel-card-title">GreenTree Inn</h3>
               <p class="hotel-card-type">Гостиница</p>
@@ -241,7 +241,7 @@
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="copyright" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
+        <img class="htmlacademy-logo" src="img/Logo-htmlacademy.svg" width="115" height="33" alt="Логотип HTML Academy">
       </a>
     </footer>
   </body>
