--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <title>Седона. Городок в Аризоне</title>
   </head>
-
   <body>
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="" alt="Логотип города Седона">
+          <img class="page-header-logo" src="img/logo-citiofsedona.svg" width="140" height="70.05" alt="Логотип города Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -43,7 +41,7 @@
       <h1 class="visually-hidden">
         Добро пожаловать в город Седона!
       </h1>
-      <img class="welcomtosedona" src="" alt="Добро пожаловать в город Седона!">
+      <img class="welcomtosedona" src="img/welcometosedona.svg" width="458" height="352" alt="Добро пожаловать в город Седона!">
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <p class="advantages-main-description">
@@ -56,7 +54,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-img" src="" alt="Фотография города Седона">
+            <img class="advantages-img" src="img/photo-cityofsedona.jpg" width="800" height="385" alt="Фотография города Седона">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -73,7 +71,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="advantages-img" src="" alt="Фотография моста дьявола">
+            <img class="advantages-img" src="img/photo-bridgeofdevil.jpg" width="800" height="385" alt="Фотография моста дьявола">
           </li>
         </ul>
       </section>
@@ -149,7 +147,7 @@
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="copyright" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
+        <img class="htmlacademy-logo" src="img/Logo-htmlacademy.svg" width="115" height="33" alt="Логотип HTML Academy">
       </a>
     </footer>
   </body>
