--- a/index.html
+++ b/index.html
@@ -1,154 +1,195 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>Седона. Городок в Аризоне</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="img/logo-citiofsedona.svg" width="140" height="70.05" alt="Логотип города Седона">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-user">
-          <li class="navigation-user-item">
-            <a class="navigation-user-link navigation-user-link-search" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link navigation-user-link-favorite" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <span class="notification-badge">12</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header-button" href="#">Хочу сюда!</a>
-    </header>
-    <main class="main-index">
-      <h1 class="visually-hidden">
-        Добро пожаловать в город Седона!
-      </h1>
-      <img class="welcomtosedona" src="img/welcometosedona.svg" width="458" height="352" alt="Добро пожаловать в город Седона!">
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <p class="advantages-main-description">
-          Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </p>
-        <p class="advantages-main-description">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-img" src="img/photo-cityofsedona.jpg" width="800" height="385" alt="Фотография города Седона">
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="advantages-img" src="img/photo-bridgeofdevil.jpg" width="800" height="385" alt="Фотография моста дьявола">
-          </li>
-        </ul>
-      </section>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <p class="services-main-description">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </p>
-        <p class="services-main-description">
-          Опытный персонал и качественное обслуживание!
-        </p>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-title">Жильё</h3>
-            <p class="services-description">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Еда</h3>
-            <p class="services-description">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Сувениры</h3>
-            <p class="services-description">
-              Не только китайского, но и настоящего местного производства!
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="interest">
-        <h2 class="visually-hidden">Поиск гостиницы</h2>
-        <p class="interest-main-description">Заинтересовались?</p>
-        <p class="interest-main-description">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
-        </p>
-        <a class="interest-link button">Поиск гостиницы В Седоне</a>
-      </section>
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">
-          Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="subscribe-form-name">
-            <label class="visually-hidden" for="user-email">Ваш e-mail</label>
-            <input class="subscribe-email" type="email" id="user-email" placeholder="Ваш e-mail">
+    <div class="container">
+      <!--Начало шапки-->
+      <header class="page-header" data-test="header">
+        <nav class="navigation">
+          <a class="navigation-logo" href="#">
+            <img class="page-header-logo" src="img/logo-citiofsedona.svg" width="140" height="70"
+              alt="Логотип города Седона">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-user-link-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-user-link-favorite" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <span class="notification-badge">12</span>
+              </a>
+            </li>
+          </ul>
+          <a class="button header-button" href="#">Хочу сюда!</a>
+        </nav>
+      </header>
+      <!--Конец шапки-->
+
+      <!--Начало основного контента-->
+      <main class="main-container main-index" data-test="main">
+        <section class="welcome-to-sedona" data-test="hero">
+          <!--Главный заголовок-->
+          <h1 class="visually-hidden">
+            Добро пожаловать в город Седона!
+          </h1>
+          <!--Конец главный заголовок-->
+          <img class="welcometosedona" src="img/welcometosedona.svg" width="458" height="352" alt="Добро пожаловать в город Седона!">
+        </section>
+
+        <!--Преимущества-->
+        <section class="advantages" data-test="advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <p class="advantages-main-title">
+            Седона — небольшой городок в Аризоне, заслуживающий большего!
           </p>
-          <button class="subscribe-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <h2 class="visually-hidden">Как с нами связаться</h2>
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">YouTube</span>
-          </a>
-        </li>
-      </ul>
-      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="copyright" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" src="img/Logo-htmlacademy.svg" width="115" height="33" alt="Логотип HTML Academy">
-      </a>
-    </footer>
+          <p class="advantages-main-description">
+            Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+          </p>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
+            </li>
+            <li class="advantages-item photo-realcity">
+              <img class="advantages-img" src="img/photo-cityofsedona.jpg" width="800" height="385"
+                alt="Фотография города Седона">
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item photo-bridgeofdevil">
+              <img class="advantages-img" src="img/photo-bridgeofdevil.jpg" width="800" height="385"
+                alt="Фотография моста дьявола">
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+          </ul>
+        </section>
+        <!--Конец преимущества-->
+
+        <!--Услуги-->
+        <section class="services">
+          <h2 class="visually-hidden">Услуги</h2>
+          <p class="services-main-title">
+            Приезжайте в Седону отдохнуть в комфорте и уюте!
+          </p>
+          <p class="services-main-description">
+            Опытный персонал и качественное обслуживание!
+          </p>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3 class="services-title">Жильё</h3>
+              <p class="services-description">
+                Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Еда</h3>
+              <p class="services-description">
+                Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Сувениры</h3>
+              <p class="services-description">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!--Конец услуги-->
+
+        <!--Поиск гостиниц-->
+        <section class="interest" data-test="search">
+          <h2 class="visually-hidden">Поиск гостиницы</h2>
+          <p class="interest-main-title">Заинтересовались?</p>
+          <p class="interest-main-description">
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+          </p>
+          <a class="button interest-button">Поиск гостиницы В Седоне</a>
+        </section>
+        <!--Конец поиск гостиниц-->
+
+        <!--Подписаться на рассылку-->
+        <section class="subscribe" data-test="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-description">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="subscribe-form-name">
+              <label class="visually-hidden" for="user-email">Ваш e-mail</label>
+              <input class="subscribe-email" type="email" id="user-email" placeholder="Ваш e-mail">
+            </p>
+            <button class="button subscribe-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+        <!--Конец подписаться на рассылку-->
+
+      </main>
+      <!--Конец основного контента-->
+
+      <!--Начало подвала-->
+      <footer class="page-footer" data-test="footer">
+        <h2 class="visually-hidden">Как с нами связаться</h2>
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button footer-button" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button footer-button" href="#">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button footer-button" href="#">
+                <span class="visually-hidden">YouTube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="copyright" href="https://htmlacademy.ru/">
+          <img class="htmlacademy-logo" src="img/Logo-htmlacademy.svg" width="115" height="33"
+            alt="Логотип HTML Academy">
+        </a>
+      </footer>
+      <!--Конец подвала-->
+    </div>
   </body>
 </html>
